# hoverboard

./: .gitignore  .mcp.json  CLAUDE.md  wsl-cleanup.sh
.claude/: settings.json  settings.local.json
.claude/hooks/: protect_generated.py  run_pkg_tests.py
.claude/skills/handoff/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: bringup-checklist.md  deployment.md  devcontainer.md  handoff.md  mag-calibration.md  wiring-map.md
docs/superpowers/plans/: 2026-07-16-sp1-batarya-izleme.md
docs/superpowers/specs/: 2026-07-16-batarya-yonetimi-ve-sarj-istasyonu-design.md
firmware/esp32_bridge/: platformio.ini
firmware/esp32_bridge/src/: main.cpp
ros2/src/hoverboard_bridge/: package.xml  setup.cfg  setup.py
ros2/src/hoverboard_bridge/hoverboard_bridge/: bridge_node.py  esp32_sim.py  fake_esp32.py  protocol.py
ros2/src/hoverboard_bridge/test/: conftest.py  test_bridge_integration.py  test_protocol.py
ros2/src/mpu6050_driver/: package.xml  setup.cfg  setup.py
ros2/src/mpu6050_driver/mpu6050_driver/: fake_bus.py  imu_node.py  mpu6050.py
ros2/src/mpu6050_driver/test/: test_mpu6050.py
ros2/src/qmc5883l_driver/: package.xml  setup.cfg  setup.py
ros2/src/qmc5883l_driver/qmc5883l_driver/: fake_bus.py  mag_node.py  qmc5883l.py
ros2/src/qmc5883l_driver/test/: test_qmc5883l.py
ros2/src/robot_bringup/: CMakeLists.txt  package.xml
ros2/src/robot_bringup/config/: ekf.yaml  hoverboard_bridge.yaml  mpu6050.yaml  nav2.yaml  qmc5883l.yaml
ros2/src/robot_bringup/launch/: description.launch.py  localization.launch.py  nav2.launch.py  robot.launch.py  sensors.launch.py  teleop.launch.py
ros2/src/robot_bringup/urdf/: robot.urdf.xacro
ros2/src/robot_sim/: package.xml  setup.py
ros2/src/robot_sim/robot_sim/: sim_node.py  world.py
ros2/src/robot_sim/test/: conftest.py  test_localization.py  test_nav2.py  test_world.py
scripts/: deploy.sh
