<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, URDF and localization configuration for the hoverboard-based
    outdoor ground robot: dual-EKF (odom-&gt;base_link and map-&gt;odom) plus
    navsat_transform_node for GPS waypoint following.
  </description>
  <maintainer email="enesis@entes.com.tr">Enes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hoverboard_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Sensor drivers. Not hard deps: each is behind a launch argument so the
       stack still comes up while the hardware is still in a box.
       nmea_navsat_driver may be missing from the Jazzy apt repo — see the note
       in docs/handoff.md. -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
